## Copyright (C) 2006 Free Software Foundation, Inc.
## This Makefile.am is free software; the Free Software Foundation
## gives unlimited permission to copy, distribute and modify it.

#pkgdatadir = ${datadir}
# pkgdatadir = ../data
updfdir = $(datadir)/$(PACKAGE)/UPDF
dist_updf_DATA = ccfm-final-setA1.dat   ccfm-ipgg0ns-1-0-all-lhc.dat  \
             ccfm-final-setB0-.dat  ccfm-ipgg1ns1-0-all-lhc.dat   \
             ccfm.dat ccfm-final-setB0.dat ccfm-ipgg2ns2-0-all-lhc.dat \
             ccfm-final-setA0-.dat  ccfm-final-setB0+.dat  kmr.dat \
             ccfm-final-setA0.dat   ccfm-final-setB1.dat   kms.dat  \
             ccfm-final-setA0+.dat  ccfm-gam.dat ccfm-setC.dat \
             ccfm-quark.dat \
             JH-2013-set1-Q0+.dat JH-2013-set1-Q0-.dat JH-2013-set1-muf+.dat \
             JH-2013-set1-muf-.dat JH-2013-set1-mur+.dat JH-2013-set1-mur-.dat \
             JH-2013-set1-par1+.dat JH-2013-set1-par1-.dat JH-2013-set1-par2+.dat \
             JH-2013-set1-par2-.dat JH-2013-set1-par3+.dat JH-2013-set1-par3-.dat \
             JH-2013-set1.dat \
             JH-2013-set2-Q0+.dat JH-2013-set2-Q0-.dat JH-2013-set2-muf+.dat \
             JH-2013-set2-muf-.dat JH-2013-set2-mur+.dat JH-2013-set2-mur-.dat \
             JH-2013-set2-par1+.dat JH-2013-set2-par1-.dat JH-2013-set2-par2+.dat \
             JH-2013-set2-par2-.dat JH-2013-set2-par3+.dat JH-2013-set2-par3-.dat \
             JH-2013-set2.dat
#heradir = $(datadir)/$(PACKAGE)/HERA
#dist_hera_DATA = steer_ep steer_ep-charm steer_ep-jpsi 

#ppdir = $(datadir)/$(PACKAGE)/PP
#dist_pp_DATA = steer_pp-bottom steer_pp-top steer_pp-higgs \
             steer_pp steer_pp-jpsi steer_pp-chi \
             steer_pp-ZQQ steer_pp-Zq steer_pp-Wq \
             steer_pp-jpsijpsi 
             
lhedir = $(datadir)/$(PACKAGE)/LHE
dist_lhe_DATA = steering-PH-jets.txt steering-DY-MCatNLO.txt steering-DY-PH.txt steering-KaTie.txt\
                steering.txt \
                POWHEG-example.lhe MCatNLO-example.lhe Katie-example.lhe
data1dir = $(datadir)/$(PACKAGE)/DATA
dist_data1_DATA = pythia64-update-particle.dat 
